samples/_failures_safe/1761150189_15a8ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0a009fb.c: In function ‘main’:
./samples/SAFE/__tmp_e0a009fb.c:162:20: error: missing terminating " character
  162 |             printf("Invalid
      |                    ^~~~~~~~
./samples/SAFE/__tmp_e0a009fb.c:162:13: error: expected expression at end of input
  162 |             printf("Invalid
      |             ^~~~~~
./samples/SAFE/__tmp_e0a009fb.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e0a009fb.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e0a009fb.c:162:13: error: expected declaration or statement at end of input
